--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     bandage: bandage required tests
     long: long running tests
     hifi: pacbio hifi-reads tests
+    nano: oxford nanopore-reads tests
