--- a/pytest.ini
+++ b/pytest.ini
@@ -5,4 +5,4 @@ markers =
     hifi: pacbio hifi-reads tests
     nano: oxford nanopore-reads tests
 filterwarnings =
-    ignore::DeprecationWarning:ratelimiter.*
+    ignore::DeprecationWarning
