--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,11 @@
 [pytest]
 markers =
+    short: short-running tests
+    long: long-running tests
+    illumina: illumina short-read tests
+    hifi: pacbio hifi-read tests
+    nano: oxford nanopore-read tests
     bandage: bandage required tests
-    long: long running tests
-    hifi: pacbio hifi-reads tests
-    nano: oxford nanopore-reads tests
+    linux: linux required test
 filterwarnings =
     ignore::DeprecationWarning:ratelimiter.*
