--- a/yeat/tests/data/configs/meta.cfg
+++ b/yeat/tests/data/configs/meta.cfg
@@ -22,6 +22,14 @@
             "samples": [
                 "zymoBIOMICS_D6331"
             ]
+        },
+        {
+            "label": "metamdbg-default",
+            "algorithm": "metamdbg",
+            "extra_args": "",
+            "samples": [
+                "zymoBIOMICS_D6331"
+            ]
         }
     ]
 }
